# sysdash

./: .gitattributes  .gitignore  LICENSE  README.md  cli.py  pyproject.toml  render.py
.github/workflows/: ci.yml
sysdash/: cli.py  collector.py  render.py
sysdash.egg-info/: SOURCES.txt
templates/: report_template.html
